# First_Aid_Project

./: .gitignore  LICENSE  NOTICE.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
configs/: rag.yaml  rag.yaml.2025-10-16T18-31-32-582Z.bak  rag.yaml.2025-10-16T18-43-20-584Z.bak  rag.yaml.2025-10-16T18-43-28-031Z.bak
guides/: setup.md  setup_poetry_pyenv.md
scripts/: Z_ask.sh  Z_ingest.sh  build_index.py
src/rag/: Z_config.py  Z_ingest.py  Z_pipeline.py  __init__.py  chunk.py  cli.py  custom_chunk.py  embed.py  generator.py  indexer.py  interfaces.py  prompt.py  retriever.py  server.py  settings.py
tests/artifacts/: prompt_flow.md
tests/integration/: test_cli.py  test_pipeline.py  test_prompt_flow.py  test_server.py
tests/unit/: conftest.py  test_chunk.py  test_custom_chunk.py  test_generator.py  test_indexer.py  test_interfaces.py  test_prompt.py  test_retriever.py
